<resources>
    <string name="app_name">Mis ubicaciones</string>
    <string name="app_email">Email</string>
    <string name="app_password">Contraseña</string>
    <string name="app_register">Registrarse</string>
    <string name="app_login">Iniciar sesión</string>
    <string name="app_loginWithGoogle">Iniciar sesión con Google</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_welcome">Bienvenido/a</string>
    <string name="app_logout">Cerrar sesión</string>
    <string name="app_ubicationNotFound">No se ha obtenido la ubicación</string>
    <string name="app_addUbication">Añadir ubicación</string>
    <string name="app_ubicationName">Nombre</string>
    <string name="app_ubicationType">Tipo de ubicación</string>
    <string name="app_work">Trabajo</string>
    <string name="app_paisaje">Paisaje</string>
    <string name="app_ocio">Ocio</string>
    <string name="app_otros">Otro</string>
    <string name="app_description">Descripción</string>
    <string name="app_save">Guardar</string>
    <string name="app_namenotset">Debes introduir un nombre</string>
    <string name="app_changes">La lista se actualizará al reiniciar la app</string>
    <string name="app_correcto">Ubicación guardada correctamente</string>
    <string name="app_campos">Debes rellenar los 2 campos para continuar</string>
    <string name="app_registersucessfully">Usuario registrado correctamente</string>
    <string name="app_incorrectData">Datos incorrectos</string>
    <string name="app_noDescription">Esta ubicacición no posee descripción</string>
</resources>